# hardcaml_of_verilog

./: CHANGES.md  README.md  hardcaml_of_verilog.opam
port_verilog/: dune  hardcaml_port_verilog.ml  port_verilog.ml  port_verilog.mli
src/: cell_reference.ml  cell_reference.mli  circuit_bus_map.ml  circuit_bus_map.mli  circuit_to_json.ml  circuit_to_json.mli  dune  hardcaml_of_verilog.ml  import.ml  interface.ml  interface.mli  json_netlist.ml  json_netlist.mli  lvt.ml  lvt.mli  netlist.ml  netlist.mli  ocaml_module.ml  ocaml_module.mli  pass.ml  pass.mli  run.ml  run.mli  synthesize.ml  synthesize.mli  synthesized_design.ml  synthesized_design.mli  synthesized_designs.ml  synthesized_designs.mli  techlib.ml  techlib.mli  verilog_circuit.ml  verilog_circuit.mli  verilog_design.ml  verilog_design.mli  with_interface.ml  with_interface.mli  yosys_atd.atd  yosys_netlist.ml  yosys_netlist.mli
test/apps/: mram.ml  sat_cells.ml.unused  wrram.ml
test/examples/picorv32/: dune  picorv32.sexp  test.ml
test/examples/simple_adder/: carry_save_adder.sexp  dune  full_adder.v  simple_adder.sexp  simple_adder.v  simple_adder_16.sexp  simple_adder_8.sexp  test.ml
test/lib/: dune  hardcaml_of_verilog_test.ml  import.ml  test_circuit.ml  test_circuit_to_json.ml  test_circuit_to_json.mli  test_interface.ml  test_json.ml  test_synthesize.ml  test_verilog_design.ml  test_verilog_design.mli
test/verilog/: adff.v  bbox.v  counter.v  mem.v  simlib_chk.v
