opam-version: "2.0"
version: "v0.15.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_of_verilog"
bug-reports: "https://github.com/janestreet/hardcaml_of_verilog/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_of_verilog.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_of_verilog/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"                 {>= "4.08.0"}
  "base"                  {>= "v0.15" & < "v0.16"}
  "core_unix"             {>= "v0.15" & < "v0.16"}
  "hardcaml"              {>= "v0.15" & < "v0.16"}
  "jsonaf"                {>= "v0.15" & < "v0.16"}
  "ppx_deriving_hardcaml" {>= "v0.15" & < "v0.16"}
  "ppx_jane"              {>= "v0.15" & < "v0.16"}
  "ppx_jsonaf_conv"       {>= "v0.15" & < "v0.16"}
  "stdio"                 {>= "v0.15" & < "v0.16"}
  "dune"                  {>= "2.0.0"}
]
synopsis: "Convert Verilog to a Hardcaml design"
description: "
The opensource synthesis tool yosys is used to convert a verilog design to a JSON based
netlist representation. This library can load the JSON netlist and build a hardcaml
circuit.

Code can also be generated to wrap the conversion process using Hardcaml interfaces.
"
