opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_of_verilog"
bug-reports: "https://github.com/janestreet/hardcaml_of_verilog/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_of_verilog.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_of_verilog/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "core"
  "core_unix"
  "hardcaml"
  "hardcaml_verify"
  "jsonaf"
  "ppx_hardcaml"
  "ppx_jane"
  "ppx_jsonaf_conv"
  "stdio"
  "dune"            {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Convert Verilog to a Hardcaml design"
description: "
The opensource synthesis tool yosys is used to convert a verilog design to a JSON based
netlist representation. This library can load the JSON netlist and build a hardcaml
circuit.

Code can also be generated to wrap the conversion process using Hardcaml interfaces.
"
